# xterm-js-sys

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  index.html  rustfmt.toml
.cargo/: config
.github/workflows/: deploy.yml  full.yml  release.yml
docs/: search-index.js  settings.html  source-files.js
docs/js_sys/: all.html  fn.decode_uri.html  fn.decode_uri_component.html  fn.encode_uri.html  fn.encode_uri_component.html  fn.escape.html  fn.eval.html  fn.global.html  fn.is_finite.html  fn.parse_float.html  fn.parse_int.html  fn.try_iter.html  fn.unescape.html  index.html  struct.Array.html  struct.ArrayBuffer.html  struct.ArrayIter.html  struct.AsyncIterator.html  struct.Boolean.html  struct.DataView.html  struct.Date.html  struct.Error.html  struct.EvalError.html  struct.Float32Array.html  struct.Float64Array.html  struct.Function.html  struct.Generator.html  struct.Int16Array.html  struct.Int32Array.html  struct.Int8Array.html  struct.IntoIter.html  struct.Iter.html  struct.Iterator.html  struct.IteratorNext.html  struct.JsString.html  struct.Map.html  struct.Number.html  struct.Object.html  struct.Promise.html  struct.Proxy.html  (+15 more)
docs/js_sys/Atomics/: fn.add.html  fn.and.html  fn.compare_exchange.html  fn.exchange.html  fn.is_lock_free.html  fn.load.html  fn.notify.html  fn.notify_with_count.html  fn.or.html  fn.store.html  fn.sub.html  fn.wait.html  fn.wait_with_timeout.html  fn.xor.html  index.html
docs/js_sys/Intl/: fn.get_canonical_locales.html  index.html  struct.Collator.html  struct.DateTimeFormat.html  struct.NumberFormat.html  struct.PluralRules.html
docs/js_sys/JSON/: fn.parse.html  fn.stringify.html  fn.stringify_with_replacer.html  fn.stringify_with_replacer_and_space.html  index.html
docs/js_sys/Math/: fn.abs.html  fn.acos.html  fn.acosh.html  fn.asin.html  fn.asinh.html  fn.atan.html  fn.atan2.html  fn.atanh.html  fn.cbrt.html  fn.ceil.html  fn.clz32.html  fn.cos.html  fn.cosh.html  fn.exp.html  fn.expm1.html  fn.floor.html  fn.fround.html  fn.hypot.html  fn.imul.html  fn.log.html  fn.log10.html  fn.log1p.html  fn.log2.html  fn.max.html  fn.min.html  fn.pow.html  fn.random.html  fn.round.html  fn.sign.html  fn.sin.html  fn.sinh.html  fn.sqrt.html  fn.tan.html  fn.tanh.html  fn.trunc.html  index.html
docs/js_sys/Reflect/: fn.apply.html  fn.construct.html  fn.construct_with_new_target.html  fn.define_property.html  fn.delete_property.html  fn.get.html  fn.get_f64.html  fn.get_own_property_descriptor.html  fn.get_prototype_of.html  fn.get_u32.html  fn.has.html  fn.is_extensible.html  fn.own_keys.html  fn.prevent_extensions.html  fn.set.html  fn.set_f64.html  fn.set_prototype_of.html  fn.set_u32.html  fn.set_with_receiver.html  index.html
docs/js_sys/WebAssembly/: fn.compile.html  fn.instantiate_buffer.html  fn.instantiate_module.html  fn.instantiate_streaming.html  fn.validate.html  index.html  struct.CompileError.html  struct.Instance.html  struct.LinkError.html  struct.Memory.html  struct.Module.html  struct.RuntimeError.html  struct.Table.html
docs/src/js_sys/: lib.rs.html
docs/src/wasm_bindgen/: cast.rs.html  closure.rs.html  describe.rs.html  externref.rs.html  lib.rs.html
docs/src/web_sys/: lib.rs.html
docs/src/xterm_js_sys/: lib.rs.html  readonly_array.rs.html  xterm.rs.html
docs/wasm_bindgen/: all.html  index.html
docs/wasm_bindgen/prelude/: attr.wasm_bindgen.html
docs/web_sys/: all.html  index.html  sidebar-items.js  struct.Element.html  struct.Event.html  struct.EventTarget.html  struct.HtmlElement.html  struct.HtmlTextAreaElement.html  struct.KeyboardEvent.html  struct.MessageEvent.html  struct.MouseEvent.html  struct.Node.html  struct.UiEvent.html  struct.Worker.html
docs/xterm_js_sys/: all.html  fn.idx_to_opt.html  index.html  macro.interface!.html  macro.interface.html  macro.object.html  sidebar-items.js  struct.ReadOnlyArray.html
docs/xterm_js_sys/crossterm_support/: index.html  sidebar-items.js  struct.XtermJsCrosstermBackend.html
docs/xterm_js_sys/ext/: index.html  macro.interface.html  macro.object.html  sidebar-items.js  trait.IntoJsInterface.html
docs/xterm_js_sys/readonly_array/: fn.typify.html  index.html  sidebar-items.js  struct.ReadOnlyArray.html
docs/xterm_js_sys/xterm/: constant.__wbg_generated_const_Buffer.html  constant.__wbg_generated_const_BufferCell.html  constant.__wbg_generated_const_BufferLine.html  constant.__wbg_generated_const_BufferNamespace.html  constant.__wbg_generated_const_Disposable.html  constant.__wbg_generated_const_KeyEventData.html  constant.__wbg_generated_const_LocalizableStrings.html  constant.__wbg_generated_const_Marker.html  constant.__wbg_generated_const_Parser.html  constant.__wbg_generated_const_RenderEventData.html  constant.__wbg_generated_const_ResizeEventData.html  constant.__wbg_generated_const_SelectionPosition.html  constant.__wbg_generated_const_Terminal.html  constant.__wbg_generated_const_TerminalAddon.html  constant.__wbg_generated_const_UnicodeHandling.html  constant.__wbg_generated_const_UnicodeVersionProvider.html  enum.BellStyle.html  enum.BufferType.html  enum.CursorStyle.html  index.html  (+31 more)
examples/: .gitignore  Cargo.toml  README.md  common.rs  index.html  index.ts  package.json
examples/basic/: Cargo.toml  basic.94bc1249.js  basic.94bc1249.js.map  basic_bg.e131514f.wasm  index.html  xterm.41ad0d7a.css  xterm.41ad0d7a.css.map
examples/basic/src/: lib.rs
examples/sparkline/: Cargo.toml  index.html  sparkline.e89dfa1c.js  sparkline.e89dfa1c.js.map  sparkline_bg.d2111769.wasm  xterm.41ad0d7a.css
examples/sparkline/src/: lib.rs
examples/tui/: Cargo.toml
examples/tui/src/: lib.rs
examples/with-input/: Cargo.52889c2c.toml  Cargo.toml  index.html  with-input.636aad8a.js  with-input.636aad8a.js.map  with_input_bg.8635c364.wasm  xterm.41ad0d7a.css
examples/with-input/src/: app.rs  lib.rs  ui.rs  util.rs
src/: lib.rs  readonly_array.rs  xterm.rs
src/crossterm_support/: mod.rs
src/ext/: addon.rs  disposable.rs  event.rs  log_level.rs  marker.rs  mod.rs  options.rs  theme.rs  unicode.rs
src/tui/: mod.rs
tests/: interfaces.rs
(+92 files in other folders)
