[package]
name = "xterm-js-sys"
version = "4.5.0-alpha0"
authors = ["Rahul Butani <r.r.butan.i+crates@gmail.com>"]
edition = "2018"

description = "Rust WebAssembly bindings for xterm.js."
homepage = "https://github.com/rrbutani/xterm-js-sys"
repository = "https://github.com/rrbutani/xterm-js-sys"

readme = "README.md"

keywords = ["xterm", "xtermjs", "tui-web", "tui", "terminal"]
categories = ["api-bindings", "command-line-interface", "external-ffi-bindings", "wasm", "web-programming"]

license = "MIT"

exclude = [".github"]


[badges]
github-actions = { repository = "rrbutani/xterm-js-sys", workflow = "full" }
# [TODO] # codecov = { repository = "rrbutani/xterm-js-sys", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "rrbutani/xterm-js-sys" }
is-it-maintained-open-issues = { repository = "rrbutani/xterm-js-sys" }
maintenance = { status = "actively-developed" }


[lib]


[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"

crossterm = { git = "https://github.com/ut-utp/crossterm", version = "0.17.3", optional = true }
tui = { version = "0.9.1", default-features = false, optional = true }
# TODO: switch crossterm to mainline if stuff gets merged

[dependencies.web-sys]
version = "0.3.37"
features = [
    # "HtmlElement",
    "Element",
    "KeyboardEvent",
    "HtmlTextAreaElement",
]


[profile.release]
lto = true


[features]
default = ["ext"]
tui-backend = ["crossterm", "tui"]
ext = []


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown", "wasm32-wasi"]
rustdoc-args = ["--cfg", "docs"]
all-features = true
default-target = "wasm32-unknown-unknown"


[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rrbutani/wasm-bindgen.git", branch = "patches" } # TODO: switch back once things get merged!
