[package]
name = "xterm-js-sys"
version = "4.6.0-alpha0"
authors = ["Rahul Butani <r.r.butan.i+crates@gmail.com>"]
edition = "2018"

description = "Rust WebAssembly bindings for xterm.js."
homepage = "https://github.com/rrbutani/xterm-js-sys"
repository = "https://github.com/rrbutani/xterm-js-sys"

readme = "README.md"

keywords = ["xterm", "xtermjs", "tui-web", "tui", "terminal"]
categories = ["api-bindings", "command-line-interface", "external-ffi-bindings", "wasm", "web-programming"]

license = "MIT"

exclude = [".github"]

autoexamples = false


[badges]
github-actions = { repository = "rrbutani/xterm-js-sys", workflow = "full" }
# [TODO] # codecov = { repository = "rrbutani/xterm-js-sys", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "rrbutani/xterm-js-sys" }
is-it-maintained-open-issues = { repository = "rrbutani/xterm-js-sys" }
maintenance = { status = "actively-developed" }


[lib]


[dependencies]
js-sys = "0.3.37"
wasm-bindgen = { version = "0.2.63", features = ["strict-macro"] }

# crossterm = { version = "0.17.5", optional = true }

[dependencies.web-sys]
version = "0.3.37"
features = [
    "Element",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "MouseEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[profile.release]
opt-level = 3
lto = true


[features]
default = ["ext"]
crossterm-support = [] # TODO: do the things for this new feature..
tui-backend = ["crossterm-support"]
ext = []


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown", "wasm32-wasi"]
rustdoc-args = ["--cfg", "docs"]
all-features = true
default-target = "wasm32-unknown-unknown"


[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rrbutani/wasm-bindgen.git", branch = "patches" } # TODO: switch back once things get merged!
# crossterm = { git = "https://github.com/rrbutani/crossterm.git", branch = "xtermjs" }  # TODO: switch crossterm to mainline if stuff gets merged
