[workspace]
members = [
    "basic",
    "sparkline",
]


[profile.release]
lto = true
debug = true


[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rrbutani/wasm-bindgen.git", branch = "patches" } # TODO: switch back once things get merged!
crossterm = { git = "https://github.com/rrbutani/crossterm.git", branch = "xtermjs" } # TODO: switch back once things get merged!
tui = { git = "https://github.com/rrbutani/tui-rs.git" } # TODO: switch back once things get merged!
xterm-js-sys = { path = "../" }
