[package]
name = "basic"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"
publish = false

workspace = ".."


[dependencies]
xterm-js-sys = { path = "../../", version = "4.5.0-alpha0" }
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.37"
features = [
  'console',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Window',
]


[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
# The version of wasm-opt that wasm-pack bundles crashes on current wasm-bindgen
# .wasm files. Current wasm-opt (version 93) crashes on the DWARF info that
# wasm-bindgen produces. So, we'll just disable wasm-opt for now.
wasm-opt = false #["-O4"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = true
